Fix CI: allow insecure HTTP registry for buildx
The Gitea registry at 192.168.1.80:3000 runs HTTP, not HTTPS.
Configure the buildx builder to allow insecure/HTTP registry.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -17,7 +17,13 @@ jobs:
 
       - name: Set up Docker Buildx
         run: |
-          docker buildx create --name multiarch --driver docker-container --use
+          docker buildx create --name multiarch --driver docker-container \
+            --driver-opt network=host \
+            --config /dev/stdin --use <<'EOF'
+          [registry."192.168.1.80:3000"]
+            http = true
+            insecure = true
+          EOF
           docker buildx inspect --bootstrap
 
       - name: Build and push image
