--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -17,13 +17,14 @@ jobs:
 
       - name: Set up Docker Buildx
         run: |
-          docker buildx create --name multiarch --driver docker-container \
-            --driver-opt network=host \
-            --config /dev/stdin --use <<'EOF'
+          cat > /tmp/buildkitd.toml <<'EOF'
           [registry."192.168.1.80:3000"]
             http = true
             insecure = true
           EOF
+          docker buildx create --name multiarch --driver docker-container \
+            --driver-opt network=host \
+            --config /tmp/buildkitd.toml --use
           docker buildx inspect --bootstrap
 
       - name: Build and push image
