--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Login to registry
+        run: echo "${{ github.token }}" | docker login ${{ env.REGISTRY }} -u "${{ github.repository_owner }}" --password-stdin
+
       - name: Build and push image
         run: |
           docker build \
