--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Login to registry
-        run: echo "${{ github.token }}" | docker login ${{ env.REGISTRY }} -u "${{ github.repository_owner }}" --password-stdin
+        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ${{ env.REGISTRY }} -u "${{ github.repository_owner }}" --password-stdin
 
       - name: Build and push image
         run: |
