--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -8,24 +8,13 @@ env:
   IMAGE: ideabile/gigi
   SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
   SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
+  DEPLOY_HOST: 192.168.1.110
 
 jobs:
   build:
     runs-on: ubuntu-latest-utils
     steps:
       - uses: actions/checkout@v4
-
-      - name: Login to registry
-        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ${{ env.REGISTRY }} -u "${{ github.repository_owner }}" --password-stdin
-
-      - name: Build and push image
-        run: |
-          docker build \
-            -t ${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }} \
-            -t ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest \
-            .
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }}
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest
 
       - name: Setup SSH
         run: |
@@ -36,18 +25,62 @@ jobs:
           echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
 
+      - name: Build on cluster (arm64)
+        run: |
+          rsync -az --exclude=.git --exclude=node_modules . root@${{ env.DEPLOY_HOST }}:/tmp/gigi-build/
+          ssh root@${{ env.DEPLOY_HOST }} "
+            cd /tmp/gigi-build
+            docker build \
+              -t ${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }} \
+              -t ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest \
+              .
+            echo '${{ secrets.REGISTRY_TOKEN }}' | docker login ${{ env.REGISTRY }} -u ${{ github.repository_owner }} --password-stdin
+            docker push ${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }}
+            docker push ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest
+            rm -rf /tmp/gigi-build"
+
       - name: Deploy service
         run: |
           IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE }}:latest"
-          COMPOSE="version: \"3.9\"\nservices:\n  gigi:\n    image: ${IMAGE_TAG}\n    environment:\n      - DATABASE_URL=postgresql://gigi:gigi@postgres:5432/gigi\n    networks:\n      - databases_default\n      - http-entry_default\n    deploy:\n      mode: replicated\n      replicas: 1\n      update_config:\n        order: start-first\n        failure_action: rollback\n      restart_policy:\n        condition: on-failure\n        delay: 5s\n        max_attempts: 3\n    healthcheck:\n      test: [\"CMD-SHELL\", \"curl -f http://localhost:3000/health || exit 1\"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n      start_period: 40s\nnetworks:\n  databases_default:\n    external: true\n  http-entry_default:\n    external: true"
-          ssh root@192.168.1.110 "
+          ssh root@${{ env.DEPLOY_HOST }} "
             if docker service inspect ideabile-biancifiore-gigi_gigi >/dev/null 2>&1; then
               docker service update \
                 --image ${IMAGE_TAG} \
                 --with-registry-auth \
                 ideabile-biancifiore-gigi_gigi
             else
-              printf '${COMPOSE}' > /tmp/gigi-compose.yml
+              printf '%s\n' \
+                'version: \"3.9\"' \
+                'services:' \
+                '  gigi:' \
+                '    image: ${IMAGE_TAG}' \
+                '    environment:' \
+                '      - DATABASE_URL=postgresql://gigi:gigi@postgres:5432/gigi' \
+                '    networks:' \
+                '      - databases_default' \
+                '      - http-entry_default' \
+                '    deploy:' \
+                '      mode: replicated' \
+                '      replicas: 1' \
+                '      update_config:' \
+                '        order: start-first' \
+                '        failure_action: rollback' \
+                '      restart_policy:' \
+                '        condition: on-failure' \
+                '        delay: 5s' \
+                '        max_attempts: 3' \
+                '    healthcheck:' \
+                '      test: [\"CMD-SHELL\", \"curl -f http://localhost:3000/health || exit 1\"]' \
+                '      interval: 30s' \
+                '      timeout: 10s' \
+                '      retries: 3' \
+                '      start_period: 40s' \
+                'networks:' \
+                '  databases_default:' \
+                '    external: true' \
+                '  http-entry_default:' \
+                '    external: true' \
+                > /tmp/gigi-compose.yml
               docker stack deploy -c /tmp/gigi-compose.yml --with-registry-auth ideabile-biancifiore-gigi
               rm /tmp/gigi-compose.yml
             fi"
