--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -41,46 +41,40 @@ jobs:
 
       - name: Deploy service
         run: |
-          IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE }}:latest"
+          IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }}"
           ssh root@${{ env.DEPLOY_HOST }} "
-            if docker service inspect ideabile-biancifiore-gigi_gigi >/dev/null 2>&1; then
-              docker service update \
-                --image ${IMAGE_TAG} \
-                --with-registry-auth \
-                ideabile-biancifiore-gigi_gigi
-            else
-              printf '%s\n' \
-                'version: \"3.9\"' \
-                'services:' \
-                '  gigi:' \
-                '    image: ${IMAGE_TAG}' \
-                '    environment:' \
-                '      - DATABASE_URL=postgresql://gigi:gigi@postgres:5432/gigi' \
-                '    networks:' \
-                '      - databases_default' \
-                '      - http-entry_default' \
-                '    deploy:' \
-                '      mode: replicated' \
-                '      replicas: 1' \
-                '      update_config:' \
-                '        order: start-first' \
-                '        failure_action: rollback' \
-                '      restart_policy:' \
-                '        condition: on-failure' \
-                '        delay: 5s' \
-                '        max_attempts: 3' \
-                '    healthcheck:' \
-                '      test: [\"CMD-SHELL\", \"curl -f http://localhost:3000/health || exit 1\"]' \
-                '      interval: 30s' \
-                '      timeout: 10s' \
-                '      retries: 3' \
-                '      start_period: 40s' \
-                'networks:' \
-                '  databases_default:' \
-                '    external: true' \
-                '  http-entry_default:' \
-                '    external: true' \
-                > /tmp/gigi-compose.yml
-              docker stack deploy -c /tmp/gigi-compose.yml --with-registry-auth ideabile-biancifiore-gigi
-              rm /tmp/gigi-compose.yml
-            fi"
+            docker stack rm ideabile-biancifiore-gigi 2>/dev/null; sleep 5
+            printf '%s\n' \
+              'version: \"3.9\"' \
+              'services:' \
+              '  gigi:' \
+              '    image: ${IMAGE_TAG}' \
+              '    environment:' \
+              '      - DATABASE_URL=postgresql://gigi:gigi@postgres:5432/gigi' \
+              '    networks:' \
+              '      - databases_default' \
+              '      - http-entry_default' \
+              '    deploy:' \
+              '      mode: replicated' \
+              '      replicas: 1' \
+              '      update_config:' \
+              '        order: start-first' \
+              '        failure_action: rollback' \
+              '      restart_policy:' \
+              '        condition: on-failure' \
+              '        delay: 5s' \
+              '        max_attempts: 3' \
+              '    healthcheck:' \
+              '      test: [\"CMD-SHELL\", \"curl -f http://localhost:3000/health || exit 1\"]' \
+              '      interval: 30s' \
+              '      timeout: 10s' \
+              '      retries: 3' \
+              '      start_period: 40s' \
+              'networks:' \
+              '  databases_default:' \
+              '    external: true' \
+              '  http-entry_default:' \
+              '    external: true' \
+              > /tmp/gigi-compose.yml
+            docker stack deploy -c /tmp/gigi-compose.yml --with-registry-auth ideabile-biancifiore-gigi
+            rm /tmp/gigi-compose.yml"
