ci: add Caddyfile and deploy via deploy-site action
Routes claude.cluster.local to Gigi's service on port 3000.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -78,3 +78,8 @@ jobs:
               > /tmp/gigi-compose.yml
             docker stack deploy -c /tmp/gigi-compose.yml --with-registry-auth ideabile-biancifiore-gigi
             rm /tmp/gigi-compose.yml"
+
+      - name: Deploy Caddy config
+        uses: http://192.168.1.80:3000/ideabile/deploy-site@main
+        with:
+          caddy_file: Caddyfile
