ci: fix deploy-site ssh_user and swarm_host
Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -83,3 +83,5 @@ jobs:
         uses: http://192.168.1.80:3000/ideabile/deploy-site@main
         with:
           caddy_file: Caddyfile
+          ssh_user: root
+          swarm_host: 192.168.1.110
