--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.39.0",
+    "@anthropic-ai/claude-agent-sdk": "^0.1.0",
+    "@modelcontextprotocol/sdk": "^1.0.0",
     "grammy": "^1.35.0",
     "hono": "^4.7.0",
     "@hono/node-server": "^1.14.0",
