fix: pre-configure git creds + SSH key + trim MCP to gitea/telegram
Root cause: Claude Code has its own Bash/Read/Write tools, but the MCP
server duplicated them. Claude Code used its built-in Bash for git
which had no credentials, then spiraled trying to find tokens.

Fix:
- Pre-configure git credentials (identity + Gitea HTTP token) in
  global .gitconfig before starting Claude Code subprocess
- Add SSH key support via Docker secret (gigi_ssh_key)
- Remove redundant MCP tools — keep only gitea + telegram_send
- Update system prompt with correct tool names and SSH clone URLs
- Set cwd to /workspace
- CI: create Docker secret from SSH_PRIVATE_KEY_GIGI, mount in service

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -39,6 +39,11 @@ jobs:
             docker push ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest
             rm -rf /tmp/gigi-build"
 
+      - name: Create Docker secrets
+        run: |
+          ssh root@${{ env.DEPLOY_HOST }} "
+            echo '${{ secrets.SSH_PRIVATE_KEY_GIGI }}' | docker secret create gigi_ssh_key - 2>/dev/null || true"
+
       - name: Deploy service
         run: |
           IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }}"
@@ -51,6 +56,8 @@ jobs:
               '    image: ${IMAGE_TAG}' \
               '    environment:' \
               '      - DATABASE_URL=postgresql://gigi:${{ secrets.DB_PASSWORD }}@postgres:5432/gigi' \
+              '    secrets:' \
+              '      - gigi_ssh_key' \
               '    networks:' \
               '      - databases_default' \
               '      - http-entry_default' \
@@ -70,6 +77,9 @@ jobs:
               '      timeout: 10s' \
               '      retries: 3' \
               '      start_period: 40s' \
+              'secrets:' \
+              '  gigi_ssh_key:' \
+              '    external: true' \
               'networks:' \
               '  databases_default:' \
               '    external: true' \
