--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "grammy": "^1.35.0",
     "hono": "^4.7.0",
     "@hono/node-server": "^1.14.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "playwright": "^1.41.0",
+    "ws": "^8.16.0",
+    "sharp": "^0.33.2"
   },
   "engines": {
     "node": ">=20"
