--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test": "node --test tests/**/*.test.js src/**/*.test.js",
+    "test:watch": "node --test --watch tests/**/*.test.js src/**/*.test.js",
+    "test:ci": "node scripts/test-runner.js"
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.0",
