fix: use GHCR neko image with arm64 support, restore full build
Docker Hub m1k1o/neko:chromium is amd64-only. Switch to GHCR image
ghcr.io/m1k1o/neko/chromium which has multi-arch builds (amd64 +
arm64). Restore building both services in CI now that both have
arm64 support.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Dockerfile.neko
+++ b/Dockerfile.neko
@@ -1,5 +1,5 @@
-# Based on m1k1o/neko:chromium with custom configurations
-FROM m1k1o/neko:chromium
+# GHCR image has multi-arch support (amd64 + arm64)
+FROM ghcr.io/m1k1o/neko/chromium
 
 # Install additional tools if needed
 USER root
