--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -37,21 +37,18 @@ jobs:
             export IMAGE=${{ env.IMAGE }}
             export TAG=${{ github.sha }}
 
-            # Build and push gigi service (must succeed)
-            docker compose build gigi
+            # Build both services
+            docker compose build
+
+            # Tag and push gigi service
             docker tag \${REGISTRY}/\${IMAGE}:\${TAG} \${REGISTRY}/\${IMAGE}:latest
             docker push \${REGISTRY}/\${IMAGE}:\${TAG}
             docker push \${REGISTRY}/\${IMAGE}:latest
 
-            # Build and push neko service (best-effort — may fail on arm64)
-            if docker compose build gigi-neko; then
-              docker tag \${REGISTRY}/\${IMAGE}-neko:\${TAG} \${REGISTRY}/\${IMAGE}-neko:latest
-              docker push \${REGISTRY}/\${IMAGE}-neko:\${TAG}
-              docker push \${REGISTRY}/\${IMAGE}-neko:latest
-              echo 'Neko image built and pushed'
-            else
-              echo 'WARNING: Neko build failed (likely arm64 incompatibility), skipping'
-            fi
+            # Tag and push neko service
+            docker tag \${REGISTRY}/\${IMAGE}-neko:\${TAG} \${REGISTRY}/\${IMAGE}-neko:latest
+            docker push \${REGISTRY}/\${IMAGE}-neko:\${TAG}
+            docker push \${REGISTRY}/\${IMAGE}-neko:latest
 
             rm -rf /tmp/gigi-build"
 
