fix: run neko container as root for supervisord privilege drop
Supervisord needs to start as root to drop privileges to the neko
user. Removing USER neko directive — the base image's supervisord
handles the user switch internally.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Dockerfile.neko
+++ b/Dockerfile.neko
@@ -15,8 +15,7 @@ RUN mkdir -p /etc/neko
 COPY --chown=neko:neko docker/neko-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/neko-entrypoint.sh
 
-# Switch back to neko user
-USER neko
+# Must run as root — supervisord handles privilege drop to neko user
 
 # Set default environment variables
 ENV NEKO_SCREEN=1920x1080@30 \
