fix: use upstream neko image directly, drop custom Dockerfile
The custom Dockerfile.neko only added curl/jq and a commented-out
entrypoint — no real customization. Use ghcr.io/m1k1o/neko/chromium
directly in docker-compose.yml (has arm64 support). Remove the
neko build/push from CI. Fix healthcheck to hit / instead of
/api/health which returned 404.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -37,18 +37,11 @@ jobs:
             export IMAGE=${{ env.IMAGE }}
             export TAG=${{ github.sha }}
 
-            # Build both services
-            docker compose build
-
-            # Tag and push gigi service
+            # Build and push gigi service (neko uses upstream GHCR image directly)
+            docker compose build gigi
             docker tag \${REGISTRY}/\${IMAGE}:\${TAG} \${REGISTRY}/\${IMAGE}:latest
             docker push \${REGISTRY}/\${IMAGE}:\${TAG}
             docker push \${REGISTRY}/\${IMAGE}:latest
-
-            # Tag and push neko service
-            docker tag \${REGISTRY}/\${IMAGE}-neko:\${TAG} \${REGISTRY}/\${IMAGE}-neko:latest
-            docker push \${REGISTRY}/\${IMAGE}-neko:\${TAG}
-            docker push \${REGISTRY}/\${IMAGE}-neko:latest
 
             rm -rf /tmp/gigi-build"
 
