fix: proxy neko through Caddy at /browser instead of direct port 8080
Avoids SSL_ERROR_RX_RECORD_TOO_LONG when iframe loads neko over HTTPS
by routing through Caddy reverse proxy. Added neko to http-entry network
and removed the now-unnecessary port 8080 publish.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,13 @@
 claude.cluster.local {
+	# Neko browser UI at /browser (strips prefix, proxies to neko)
+	handle_path /browser/* {
+		reverse_proxy idea-biancifiore-gigi_gigi-neko:8080
+	}
+	handle /browser {
+		rewrite * /
+		reverse_proxy idea-biancifiore-gigi_gigi-neko:8080
+	}
+
 	# Handle WebSocket connections for browser control on /ws path
 	@browserws {
 		path /ws
