--- a/Caddyfile
+++ b/Caddyfile
@@ -1,13 +1,8 @@
-claude.cluster.local {
-	# Neko browser UI at /browser (strips prefix, proxies to neko)
-	handle_path /browser/* {
-		reverse_proxy idea-biancifiore-gigi_gigi-neko:8080
-	}
-	handle /browser {
-		rewrite * /
-		reverse_proxy idea-biancifiore-gigi_gigi-neko:8080
-	}
+browser.cluster.local {
+	reverse_proxy idea-biancifiore-gigi_gigi-neko:8080
+}
 
+claude.cluster.local {
 	# Handle WebSocket connections for browser control on /ws path
 	@browserws {
 		path /ws
