Add neko WebRTC and API proxy configuration
- Configure WebSocket proxy for WebRTC signaling at /api/ws
- Add API endpoint proxy for ICE candidates and session management
- Ensure proper header forwarding for WebSocket upgrade

This fixes WebRTC connectivity issues by properly routing all neko
communication through Caddy.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Caddyfile
+++ b/Caddyfile
@@ -33,3 +33,22 @@ claude.cluster.local {
 		flush_interval -1
 	}
 }
+
+neko.cluster.local {
+	# WebRTC signaling endpoint
+	@webrtc {
+		path /api/ws
+		header Connection *Upgrade*
+		header Upgrade websocket
+	}
+	reverse_proxy @webrtc idea-biancifiore-gigi_neko:8080
+
+	# ICE candidates and session management
+	@api {
+		path /api/*
+	}
+	reverse_proxy @api idea-biancifiore-gigi_neko:8080
+
+	# Static assets and main application
+	reverse_proxy idea-biancifiore-gigi_neko:8080
+}
