Fix neko WebRTC connectivity with proper NAT configuration
- Set NEKO_NAT1TO1 to host IP (192.168.1.80) for proper ICE candidates
- Add STUN server configuration using Google's public STUN servers
- Update .env.example with critical NAT1TO1 documentation
- Add comprehensive WebRTC troubleshooting guide

This should resolve the "ICE failed" errors by ensuring neko advertises
the correct IP address for WebRTC media connections.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ DATABASE_URL=postgresql://gigi:password@postgres:5432/gigi
 NEKO_PASSWORD=neko
 NEKO_ADMIN_PASSWORD=admin
 NEKO_SCREEN=1920x1080@30
-NEKO_NAT1TO1=
+# CRITICAL: Set this to the external IP/hostname where neko is accessible for WebRTC
+NEKO_NAT1TO1=192.168.1.80
 
 # Browser Mode Configuration
 BROWSER_MODE=neko
