--- a/.gitea/workflows/test.yml
+++ b/.gitea/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Type check
+        run: npx tsc --noEmit
+
       - name: Run tests
         id: run-tests
         run: |
