--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js",
+    "dev": "vite --config vite.config.ts",
+    "dev:server": "node --watch src/index.js",
+    "build": "vite build --config vite.config.ts",
+    "typecheck": "tsc --noEmit",
     "test": "node --test tests/**/*.test.js src/**/*.test.js",
     "test:watch": "node --test --watch tests/**/*.test.js src/**/*.test.js",
     "test:ci": "node scripts/test-runner.js"
@@ -20,7 +23,15 @@
     "pg": "^8.13.0",
     "playwright": "^1.41.0",
     "ws": "^8.16.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "zod": "^3.24.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.0",
+    "vite": "^6.1.0",
+    "@types/node": "^20.0.0",
+    "@types/pg": "^8.11.0",
+    "@types/ws": "^8.5.0"
   },
   "engines": {
     "node": ">=20"
