feat: migrate all src/*.js to TypeScript in consolidated lib/ structure
Restructure from scattered core-*/api-*/domain-* to consolidated:
- lib/core/ — store, events, health, agent, enforcer, router, mcp, protocol
- lib/api/ — web, telegram, webhooks, webhookRouter
- lib/domain/ — projects, issues, setup
- lib/tools/ — gitea, telegram, browser, browser-manager

All modules fully migrated from JS to TS with proper types.
Entry point moved to src/index.ts using tsx runtime.
tsc --noEmit passes with zero errors.

Closes #63

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -3,7 +3,7 @@
     "gigi-tools": {
       "type": "stdio",
       "command": "node",
-      "args": ["src/mcp-server.js"],
+      "args": ["--import", "tsx", "lib/core/mcp.ts"],
       "env": {
         "DATABASE_URL": "${DATABASE_URL}"
       }
