--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "description": "Persistent AI coordinator for the TuringPi cluster",
   "type": "module",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node --import tsx src/index.ts",
     "dev": "vite --config vite.config.ts",
-    "dev:server": "node --watch src/index.js",
+    "dev:server": "node --import tsx --watch src/index.ts",
     "build": "vite build --config vite.config.ts",
     "typecheck": "tsc --noEmit",
     "test": "node --test tests/**/*.test.js src/**/*.test.js",
