--- a/package.json
+++ b/package.json
@@ -18,18 +18,22 @@
     "@anthropic-ai/claude-agent-sdk": "^0.1.0",
     "@hono/node-server": "^1.14.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "@shoelace-style/shoelace": "^2.20.1",
     "grammy": "^1.35.0",
     "hono": "^4.7.0",
     "pg": "^8.13.0",
     "playwright": "^1.41.0",
     "sharp": "^0.33.2",
+    "svelte": "^5.51.0",
     "ws": "^8.16.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.0",
     "@types/ws": "^8.5.0",
+    "svelte-check": "^4.4.0",
     "tsx": "^4.21.0",
     "typescript": "^5.7.0",
     "vite": "^6.1.0"
