--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@shoelace-style/shoelace": "^2.20.1",
     "grammy": "^1.35.0",
+    "highlight.js": "^11.11.1",
     "hono": "^4.7.0",
+    "marked": "^17.0.2",
     "pg": "^8.13.0",
     "playwright": "^1.41.0",
     "sharp": "^0.33.2",
