feat: implement kanban board with Gitea issue sync and drag-and-drop
- Add /api/gitea/board endpoint that aggregates issues across all org repos,
  grouped by status/ labels into kanban columns (Backlog, Ready, In Progress,
  Review, Blocked, Done)
- Add /api/gitea/board/move endpoint to move cards between columns by
  updating issue status labels via the Gitea API
- Build full GigiKanban.svelte component with:
  - Responsive column layout with horizontal scrolling
  - Issue cards showing repo, title, labels, assignee, priority, comments
  - Native HTML5 drag-and-drop with optimistic UI updates and rollback
  - Auto-refresh every 60s when visible, skeleton loading states
  - Compact mode support (header-only when collapsed)
  - Click-to-navigate to issue detail view
- Add kanban.svelte.ts store for board state, data fetching, drag state
- Switch Vite dev proxy to use GIGI_API_URL env var for live app development
- Default kanban panel to 'full' (visible) instead of 'hidden'
- Document GIGI_API_URL/GIGI_WS_URL in .env.example

Closes #62

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ NEKO_NAT1TO1=192.168.1.80
 
 # Browser Mode Configuration
 BROWSER_MODE=neko
+
+# Vite Dev Proxy (for local frontend development)
+# Point these to the live Gigi app to develop against real data
+# GIGI_API_URL=http://192.168.1.80:3100
+# GIGI_WS_URL=ws://192.168.1.80:3101
