feat: WIP SPA improvements + Gitea hybrid UI design docs
Includes in-progress frontend improvements (panels, filters, kanban,
chat overlay) and design documents for the Gitea hybrid UI approach.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,26 @@
 # Gigi Local Development Environment
 # Copy to .env.local and customize:
 #   cp .env.local.example .env.local
+#
+# ── Dev workflow (HMR) ──────────────────────────────────────
+#
+#   1. Start infra:
+#      docker-compose -f docker-compose.local.yml --env-file .env.local up
+#
+#   2. Start backend (auto-restarts on changes):
+#      DATABASE_URL=postgresql://gigi:gigi@localhost:5432/gigi npm run dev:server
+#
+#   3. Start frontend (Vite HMR on :5173, proxies API to :3100):
+#      npm run dev
+#
+#   Open http://localhost:5173
+#
+# ── Prod-like workflow (full Docker build, no HMR) ──────────
+#
+#   docker-compose -f docker-compose.local.yml --env-file .env.local --profile prod up --build
+#
+#   Open http://localhost:3100
+#
 
 # Gitea admin user (created automatically)
 ADMIN_USER=mauro
