--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -32,6 +32,8 @@ services:
       POSTGRES_USER: gigi
       POSTGRES_PASSWORD: gigi
       POSTGRES_DB: gigi
+    ports:
+      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
@@ -70,6 +72,8 @@ services:
     entrypoint: ["sh", "-c", "apk add --no-cache postgresql-client curl && sh /local-init.sh"]
     restart: "no"
 
+  # Full build — production-like. No HMR.
+  #   docker-compose -f docker-compose.local.yml up
   gigi:
     build:
       context: .
@@ -87,6 +91,8 @@ services:
       - workspace:/workspace
     networks:
       - gigi-local
+    profiles:
+      - prod
 
 volumes:
   gitea-data:
