--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hono": "^4.7.0",
     "marked": "^17.0.2",
     "pg": "^8.13.0",
+    "pixelarticons": "^1.8.1",
     "playwright": "^1.41.0",
     "sharp": "^0.33.2",
     "svelte": "^5.51.0",
