feat: Gitea iframe infrastructure — templates, proxy, compose
- Custom Gitea templates strip header/footer for iframe embedding
- PostMessage bridge script for SPA <-> iframe communication
- CSS overrides to fill content area
- Caddy /gitea/* proxy route with prefix stripping
- Vite dev proxy for local development
- Docker Compose volume mount for custom templates

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Caddyfile
+++ b/Caddyfile
@@ -3,6 +3,15 @@ browser.cluster.local {
 }
 
 claude.cluster.local {
+	# Gitea UI proxy (iframe embedding)
+	@gitea {
+		path /gitea/*
+	}
+	handle @gitea {
+		uri strip_prefix /gitea
+		reverse_proxy idea-biancifiore-gigi_gitea:3000
+	}
+
 	# Handle WebSocket connections for browser control on /ws path
 	@browserws {
 		path /ws
