feat: production Gitea proxy + template deployment script
- Fix Caddyfile to point to production Gitea at 192.168.1.80:3000
- Add deploy-gitea-templates.sh for production template deployment

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Caddyfile
+++ b/Caddyfile
@@ -9,7 +9,7 @@ claude.cluster.local {
 	}
 	handle @gitea {
 		uri strip_prefix /gitea
-		reverse_proxy idea-biancifiore-gigi_gitea:3000
+		reverse_proxy 192.168.1.80:3000
 	}
 
 	# Handle WebSocket connections for browser control on /ws path
