feat: welcome screen, Gitea subpath + auth proxy, dev.sh
- Welcome/empty state when no user repos: import, create, or
  describe your project to Gigi
- Fix Gitea ROOT_URL with /gitea subpath so all generated URLs
  (assets, avatars, links) include the prefix
- Hono proxy injects auth token for logged-in iframe experience
- Simplified bridge script (no more link rewriting needed)
- dev.sh: one command to start everything with HMR
- dev.sh --fresh: wipe state and show onboarding

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -4,7 +4,7 @@ services:
     environment:
       - GITEA__security__INSTALL_LOCK=true
       - GITEA__database__DB_TYPE=sqlite3
-      - GITEA__server__ROOT_URL=http://localhost:3000
+      - GITEA__server__ROOT_URL=http://localhost:3300/gitea
       - GITEA__server__SSH_DOMAIN=localhost
       - GITEA__server__SSH_PORT=2222
       - GITEA__server__SSH_LISTEN_PORT=2222
@@ -13,7 +13,7 @@ services:
       - GITEA__service__DISABLE_REGISTRATION=true
       - GITEA__webhook__ALLOWED_HOST_LIST=*
     ports:
-      - "3000:3000"
+      - "3300:3000"
       - "2222:2222"
     volumes:
       - gitea-data:/data
@@ -92,8 +92,6 @@ services:
       - workspace:/workspace
     networks:
       - gigi-local
-    profiles:
-      - prod
 
 volumes:
   gitea-data:
