feat: add Browser view with neko integration + Chrome DevTools MCP
Browser tab in Section D embeds neko (browser-in-container) via iframe,
giving both Gigi and the user shared control of a live Chromium instance.

- Add neko service to docker-compose.local.yml with WebRTC mux, CDP relay
- Custom neko config: implicit control, remote debugging, socat CDP relay
- NekoBrowser.svelte component with same-origin CSS injection (hide chat)
- Browser menu button in GigiFilters (conditional on /api/browser/status)
- Navigation store extended with 'browser' view type
- /api/browser/status endpoint returns neko URL with auto-login credentials
- chrome-devtools-mcp configured in mcp-config.json for agent DevTools access
- Agent system prompt updated with browser tool usage examples
- MCP server loading from mcp-config.json with env var + path resolution
- Onboarding flow, layout improvements, WebSocket protocol enhancements

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Caddyfile
+++ b/Caddyfile
@@ -3,14 +3,8 @@ browser.cluster.local {
 }
 
 claude.cluster.local {
-	# Gitea UI proxy (iframe embedding)
-	@gitea {
-		path /gitea/*
-	}
-	handle @gitea {
-		uri strip_prefix /gitea
-		reverse_proxy 192.168.1.80:3000
-	}
+	# Gitea UI proxy (iframe embedding) — routed through Hono which handles auth + prefix stripping
+	# (no separate Caddy→Gitea route needed; Hono's /gitea/* handler does it)
 
 	# Handle WebSocket connections for browser control on /ws path
 	@browserws {
