--- a/mcp-config.json
+++ b/mcp-config.json
@@ -7,6 +7,11 @@
       "env": {
         "DATABASE_URL": "${DATABASE_URL}"
       }
+    },
+    "chrome-devtools": {
+      "type": "stdio",
+      "command": "npx",
+      "args": ["-y", "chrome-devtools-mcp@latest", "--browserUrl", "${CHROME_CDP_URL}", "--no-usage-statistics"]
     }
   }
 }
